--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ highlighter:      rouge
 # Setup
 title:            Yujie Chen
 tagline:          Black Theme for Jekyll
-description:      "From crafting code for embedded systems, unraveling the mysteries of machine learning algorithms, to building intricate miniature worlds and woodworking wonders – I'm a tech enthusiast with a passion for turning ideas into reality across the realms of software, AI, carpentry, and the charming universe of miniature model making!"
+description:      "Tech enthusiast passionate about crafting code for embedded systems, exploring machine learning algorithms, and creating intricate miniature worlds through software, AI, and carpentry"
 url:              https://github.com/karloespiritu/blackdoc
 baseurl:          /
                   # the optional subpath of your site, e.g. "/my-jekyll-site/"
